--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-google-login": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1"
   },
